@@ -3,6 +3,14 @@ package Crypt::Passphrase::Validator;
 use strict;
 use warnings;
 
+sub secure_compare {
+	my ($self, $left, $right) = @_;
+	return if length $left != length $right;
+	my $r = 0;
+	$r |= ord(substr $left, $_, 1) ^ ord(substr $right, $_, 1) for 0 .. length($left) - 1;
+	return $r == 0 ? 1 : undef;
+}
+
 1;
 
 #ABSTRACT: Base class for Crypt::Passphrase validators
@@ -18,3 +26,7 @@ This method returns true if this validator is able to process a hash. Typically 
 =method verify_password($password, $hash)
 
 This checks if a C<$password> satisfies C<$hash>.
+
+=method secure_compare($left, $right)
+
+This compares two strings in a way that resists timing attacks.
