@@ -2,6 +2,7 @@ Revision history for Crypt-Passphrase
 
 {{$NEXT}}
           - Always instantiate validators
+          - Add secure_compare method to Validator
 
 0.007     2023-02-12 17:20:19+01:00 Europe/Amsterdam
           - Add curry_with_hash and curry_with_password methods
